<resources>
    <string name="app_name">Dankook World</string>
    <string name="hw">회원</string>
    <string name="bhw">비회원</string>
    <string name="information">회원가입시 정보등록이 가능해집니다.</string>

    //로그인 및 회원가입
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="id"> 아이디</string>
    <string name="password">비밀번호</string>
    <string name="naver">NAVER 로그인</string>
    <string name="kakao">KAKAO 로그인</string>
    <string name="facebook">FACEBOOK 로그인</string>
    <string name="name"> 이름</string>
    <string name="phone"> 전화번호</string>
    <string name="birthday"> 생년월일</string>
    <string name="address"> 주소</string>
    <string name="password1"> 비밀번호 확인</string>
    <string name="password2">●●●●●●●</string>

    // 햄버거
    <string name="today">오늘의 LAND</string>
    <string name="time">운영시간</string>
    <string name="notice">공지사항</string>
    <string name="qr">QR 코드</string>
    <string name="event">이벤트</string>
    <string name="map">지도</string>
    <string name="coupon">쿠폰함</string>
    <string name="setting">설정</string>

    //food1
    <string name="restaurant_1">니뽕내뽕</string>
    <string name="explain_res1">다양한 퓨전 짬뽕 및 피자가 준비되어있습니다.</string>
    <string name="pop_menu">대표메뉴</string>
    <string name="time_res1">AM10:00 ~ PM08:00</string>
    <string name="pop_menu_res1">크림짬뽕, 로제짬뽕, 고구마피자</string>
    <string name="phone_res1">02-9376-1111</string>
    //food2
    <string name="restaurant_2">McDonalds</string>
    <string name="explain_res2">다양한 햄버거 세트가 준비되어있습니다.</string>
    <string name="time_res2">AM10:00 ~ PM09:30</string>
    <string name="pop_menu_res2">빅맥, 상하이버거, 1955버거</string>
    <string name="phone_res2">1544-1111</string>
    //food3
    <string name="restaurant_3">베트남노상식당</string>
    <string name="explain_res3">퓨전 베트남 음식이 준비되어있습니다.</string>
    <string name="time_res3">AM10:00 ~ PM08:30</string>
    <string name="pop_menu_res3">양지 쌀국수, 분짜, 월남쌈</string>
    <string name="phone_res3">02-2661-1234</string>
    //food4
    <string name="restaurant_4">GS25</string>
    <string name="explain_res4">다양한 생필품 및 도시락이 준비되어있습니다.</string>
    <string name="time_res4">AM9:30 ~ PM11:00</string>
    <string name="pop_menu_res4">생수, 음료, 도시락, 샌드위치</string>
    <string name="phone_res4">02-2662-2222</string>


    //설정- 개인정보 변경 저장
    <string name="save">저장하기</string>

    // 지도
    <string name="wait">대기시간</string>
    <string name="food">음식점</string>
    <string name="attraction">어트랙션</string>
    <string name="store">상점</string>

    // 아이등록
    <string name="c_register">우리 아이 등록</string>
    <string name="c_inform">아이의 간단한 정보를 입력해주세요!</string>
    <string name="register">내 정보 등록</string>
    <string name="nonmember">비회원은 필수로 입력하여야 합니다.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="mobile">mobile</string>
    <string name="message">message</string>
    <string name="direction">direction</string>


</resources>
