<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dankookworld.ui.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_notice"
        android:name="com.example.dankookworld.ui.fragment.NoticeFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_notice" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.example.dankookworld.ui.fragment.EventFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_event" />

    <fragment
        android:id="@+id/nav_find"
        android:name="com.example.dankookworld.ui.fragment.FindFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_find" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.dankookworld.ui.fragment.MapFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_map_at" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.dankookworld.ui.fragment.SettingFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_setting" />
</navigation>