<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".c_register"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="MainActivity">


        <TextView
            android:id="@+id/textView7"
            android:layout_width="260dp"
            android:layout_height="42dp"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="376dp" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/name"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="435dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/phone"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="496dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/address"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="559dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="257dp"
            android:layout_height="43dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/c_register"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="175dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/c_inform" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="227dp" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/birthday"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="288dp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="50sp"
            android:background="@color/purple"
            android:text="@string/save"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="646dp" />

    </LinearLayout>

</LinearLayout>