<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="MainActivity">


        <TextView
            android:id="@+id/textView10"
            android:layout_width="300dp"
            android:layout_height="42dp"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:text="@string/join"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="376dp" />

        <EditText
            android:singleLine="true"
            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="435dp" />

        <EditText
            android:singleLine="true"
            android:id="@+id/phone"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/phone"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="496dp" />

        <EditText
            android:singleLine="true"
            android:id="@+id/birth"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/birthday"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="559dp" />

        <EditText
            android:singleLine="true"
            android:id="@+id/address"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/address"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="559dp" />

        <EditText
            android:singleLine="true"
            android:id="@+id/insertId"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/id"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="227dp" />

        <EditText
            android:singleLine="true"
            android:id="@+id/insertPwd"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/password2"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="288dp" />

        <Button
            android:id="@+id/register"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:background="@color/purple"
            android:text="@string/join"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="646dp" />

    </LinearLayout>

</LinearLayout>