<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app= "http://schemas.android.com/apk/res-auto"
    xmlns:tools= "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    tools:context="MainActivity"
    tools:layout_editor_absoluteY="-125dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="370dp"
                android:background="@drawable/food3"
                />

            <TextView
                android:id="@+id/res3_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/restaurant_3"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/res3_ex"
                android:layout_width="415dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/explain_res3"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/cir_border"
            android:layout_marginTop="17dp">

            <TextView
                android:id="@+id/res3_menu"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:gravity="left"
                android:text="@string/pop_menu"
                android:textColor="@color/purple"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:id="@+id/res3_pop_menu"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/pop_menu_res3"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/cir_border"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/res3_time"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:gravity="left"
                android:text="@string/time"
                android:textColor="@color/purple"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:id="@+id/res3_in_time"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/time_res3"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/cir_border"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/res3_phone"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:gravity="left"
                android:text="@string/phone"
                android:textColor="@color/purple"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:id="@+id/res3_in_phone"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/phone_res3"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                />
        </LinearLayout>

</LinearLayout>