<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!--보관용 메인화면 -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        tools:context="MainActivity"
        tools:layout_editor_absoluteY="-125dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#4F178A"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:text="@string/app_name"
                android:textColor="@android:color/background_light"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:singleLine="true"
                android:id="@+id/id"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/border"
                android:cursorVisible="true"
                android:hint="@string/id"
                android:paddingLeft="10dp"
                android:textSize="20dp" />

            <EditText
                android:singleLine="true"
                android:id="@+id/pwd"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/border"
                android:cursorVisible="true"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:textSize="20dp" />

            <Button
                android:id="@+id/signin"
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="#4F178A"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/cir_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@drawable/naver" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="208dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/naver" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/cir_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@drawable/kakao" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="208dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/kakao" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/cir_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:background="@drawable/facebook" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="208dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/facebook" />
        </LinearLayout>

        <Button
            android:id="@+id/signup"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/recblack_border"
            android:text="@string/join" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>